2006-02-09  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/numeric/type.hxx: added descriptions for
	Equality enum.

	* source/numeric/lpmodel.cxx: added function comment for
	Model::getCostVector().

	* source/numeric/lpsimplex.cxx: modified to use temporary
	model object instead of the original one.  Also added new
	function (convertVarRange) to convert variable ranges into 
	constraint matrix so that the algirithm can make use of 
	the variable ranges which were previously just ignored
	(note: this function is not totally done yet!)


2006-01-30  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/numeric/*_test.cxx: moved to workben.

	* source/numeric/makefile.mk: declaration of TESTFILES
	removed.
	
	* source/inc/numeric/lpmodel.hxx:
	* source/numeric/lpmodel.cxx: added setCostVector() method
	for settings multiple cost variables all at once.

	* workben/*_test.cxx: moved from source/numeric.

	* workben/Makefile: initial version added.
	
	* workben/addon_pkg/Makefile: removed unused DFLAG 
	variable.  Removed the copy source tree bit as it was
	suboptimal.
	
	* workben/addon_pkg/Makefile_build: modified BASEDIR to
	point to the original source directory.
	
	* workben/matrix_test.cxx: replaced setValue() calls
	with operator().
	
	* workben/simplex_test.cxx: worked on making a yet unsolvable
	linear model from Ludovic.


2006-01-28  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* workben/addon_pkg: added new directory and files
	underneath it for building a separate scsolver package.


2006-01-16  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* matrix.[ch]xx: added new method resize() to resize
	matrix without boost's resize call.  boost 1.30.2 doesn't 
	preserve element values when resizing.
	
	* lpbuilder.[ch]xx: added new method to set initial 
	constraint matrix size.
	
	* source/ui/solvemodel.cxx: call to set initial 
	constraint matrix size.
	
	* source/ui/xcalc.cxx (getCellRangeAddress): set #ifdef
	DEBUG block.

