@@ -3,12 +3,12 @@ TARGET=scsolver.uno
 BASEDIR=../../../source
 SLVDIR=../../../../solver/680/unxlngi6.pro
 
-CPP_INCLUDES=-I$(SLVDIR)/inc -I$(BASEDIR) -I$(BASEDIR)/inc
-CPP_DEFINES=-DUNX -DGCC -DLINUX -DCPPU_ENV=gcc3 -DHAVE_GCC_VISIBILITY_FEATURE
-CPP_LIBS=
-CPP_SHAREDLIBS=-lsal -lcppuhelpergcc3 -lcppu -lstlport_gcc
-CPP_SHARED_FLAGS=-fPIC -fno-common -export-dynamic -fvisibility=hidden
-CPP=/usr/bin/g++
+LDFLAGS= -lsal -lcppuhelpergcc3 -lcppu -lstlport_gcc
+CXXCPP=-I$(SLVDIR)/inc -I$(BASEDIR) -I$(BASEDIR)/inc
+CXX_DEFINES=-DUNX -DGCC -DLINUX -DCPPU_ENV=gcc3 -DHAVE_GCC_VISIBILITY_FEATURE
+CXX_SHARED_FLAGS=-fPIC -fno-common -export-dynamic -fvisibility=hidden
+CXX=g++
+
 CPPFLAGS=-DDEBUG -Wall -Os -mtune=pentium3
 
 BINDIR=$(SLVDIR)/bin
@@ -56,40 +56,40 @@ all: $(TARGET).zip
 NUMDIR=$(BASEDIR)/numeric
 
 funcobj.o: $(HEADER) $(NUMDIR)/funcobj.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(NUMDIR)/funcobj.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(NUMDIR)/funcobj.cxx
 
 matrix.o: $(HEADER) $(NUMDIR)/matrix.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(NUMDIR)/matrix.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(NUMDIR)/matrix.cxx
 
 diff.o: $(HEADER) $(NUMDIR)/diff.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(NUMDIR)/diff.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(NUMDIR)/diff.cxx
 
 lpbase.o: $(HEADER) $(NUMDIR)/lpbase.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(NUMDIR)/lpbase.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(NUMDIR)/lpbase.cxx
 	
 lpmodel.o: $(HEADER) $(NUMDIR)/lpmodel.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(NUMDIR)/lpmodel.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(NUMDIR)/lpmodel.cxx
 
 lpsimplex.o: $(HEADER) $(NUMDIR)/lpsimplex.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(NUMDIR)/lpsimplex.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(NUMDIR)/lpsimplex.cxx
 
 nlpmodel.o: $(HEADER) $(NUMDIR)/nlpmodel.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(NUMDIR)/nlpmodel.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(NUMDIR)/nlpmodel.cxx
 
 nlpbase.o: $(HEADER) $(NUMDIR)/nlpbase.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(NUMDIR)/nlpbase.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(NUMDIR)/nlpbase.cxx
 
 nlpqnewton.o: $(HEADER) $(NUMDIR)/nlpqnewton.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(NUMDIR)/nlpqnewton.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(NUMDIR)/nlpqnewton.cxx
 
 
 #----------------------------------------------------------------------------
@@ -98,8 +98,8 @@ nlpqnewton.o: $(HEADER) $(NUMDIR)/nlpqnewton.cxx
 SRVDIR=$(BASEDIR)/service
 
 service.o: $(HEADER) $(SRVDIR)/service.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(SRVDIR)/service.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(SRVDIR)/service.cxx
 
 
 #----------------------------------------------------------------------------
@@ -108,48 +108,48 @@ service.o: $(HEADER) $(SRVDIR)/service.cxx
 UIDIR=$(BASEDIR)/ui
 
 basedlg.o: $(HEADER) $(UIDIR)/basedlg.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(UIDIR)/basedlg.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(UIDIR)/basedlg.cxx
 
 baselistener.o: $(HEADER) $(UIDIR)/baselistener.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(UIDIR)/baselistener.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(UIDIR)/baselistener.cxx
 
 dialog.o: $(HEADER) $(UIDIR)/dialog.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(UIDIR)/dialog.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(UIDIR)/dialog.cxx
 
 global.o: $(HEADER) $(UIDIR)/global.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(UIDIR)/global.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(UIDIR)/global.cxx
 
 listener.o: $(HEADER) $(UIDIR)/listener.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(UIDIR)/listener.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(UIDIR)/listener.cxx
 
 lpbuilder.o: $(HEADER) $(UIDIR)/lpbuilder.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(UIDIR)/lpbuilder.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(UIDIR)/lpbuilder.cxx
 
 msgdlg.o: $(HEADER) $(UIDIR)/msgdlg.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(UIDIR)/msgdlg.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(UIDIR)/msgdlg.cxx
 
 solvemodel.o: $(HEADER) $(UIDIR)/solvemodel.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(UIDIR)/solvemodel.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(UIDIR)/solvemodel.cxx
 
 unoglobal.o: $(HEADER) $(UIDIR)/unoglobal.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(UIDIR)/unoglobal.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(UIDIR)/unoglobal.cxx
 
 unohelper.o: $(HEADER) $(UIDIR)/unohelper.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(UIDIR)/unohelper.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(UIDIR)/unohelper.cxx
 
 xcalc.o: $(HEADER) $(UIDIR)/xcalc.cxx
-	$(CPP) $(CPPFLAGS) $(CPP_INCLUDES) $(CPP_DEFINES) $(CPP_LIBS) \
-	-o $@ $(CPP_SHARED_FLAGS) -c $(UIDIR)/xcalc.cxx
+	$(CXX) $(CPPFLAGS) $(CXXCPP) $(CXX_DEFINES) $(CPP_LIBS) \
+	-o $@ $(CXX_SHARED_FLAGS) -c $(UIDIR)/xcalc.cxx
 
 
 #----------------------------------------------------------------------------
@@ -160,7 +160,7 @@ $(TARGET).zip: $(TARGET).so
 
 $(TARGET).so: $(OBJFILES)
 	export LD_LIBRARY_PATH=$(SLVDIR)/lib && \
-	$(CPP) -shared -Wl,-soname,$@ -o $@ -lc $(OBJFILES) && \
+	$(CXX) -shared -Wl,-soname,$@ -o $@ -lc $(OBJFILES) && \
  	$(BINDIR)/regcomp -register -r $(TARGET).rdb -c $@
 
 regview:
