@@ -1,3 +1,15 @@
+2006-02-13  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* source/inc/numeric/lpsimplex.hxx:
+	* source/numeric/lpsimplex.cxx: added a new method to disable
+	two-phase intial search to prevent nested infinite two-phase
+	search loop.
+
+	* workben/simplex_test.cxx: minor tweak.
+
+	* workben/addon_pkg/Makefile_build: changed variable names.
+
+
 2006-02-09  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
 	* source/inc/numeric/type.hxx: added descriptions for
